--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -84,16 +84,15 @@
                                     </button>
                                 </form>   
                             </div>
+                           
                             <div>
-                              
-                               
+                             
                                 <div class="right" style="display: block;">
-
+                                    
                                     <button class="waves-effect waves-light btn deep-orange darken-3" onclick="hideOrShowFormModificaCorso(event, `{{ corso.id }}`)">
                                         Modifica <i class="material-icons right">create</i>
                                     </button>
                                     
-                                       
                                         
                                 </div>
                               
@@ -106,6 +105,16 @@
                                     </button>
                                 </div>
                                 
+                                 <div class="right" style="display: block; padding-right: 10px;">
+                                <form action="/statistiche" method="POST">
+                                    <input name="idcorso" type="number" style="display:none" value="{{ corso.id }}">
+                                    <button class="waves-effect waves-light btn deep-orange darken-3">
+                                        Statistiche <i class="material-icons right">
+                                            insights
+                                        </i>
+                                    </button>
+                                </form>  
+                                </div>
                             </div>
                         {%- endif -%}
                     {%- else -%}
