--- a/app/templates/lezioni.html
+++ b/app/templates/lezioni.html
@@ -22,7 +22,7 @@
 
         <div id="close_div_msg" class="bar success">
             <div class="close" id="close_div_msg">X</div>
-            <span class="material-icons ico">check</span> SUCCESSO: {{ msg_error }}
+            <i class="ico">&#10004;</i> SUCCESSO: {{ msg_error }}
         </div>
 
         {%- endif -%}
@@ -33,14 +33,21 @@
         <div id="close_div_msg" class="bar error">
             
             <div class="close" id="close_div_msg">X</div>
-            <span class="material-icons ico">report</span> 
+            <i class="ico">&#9747;</i> 
             <span >ERRORE: {{ msg_error }}</span>
         </div>
 
         {%- endif -%}
         <div>
+           
+            <button id="btn_aggiungi_lezione" class="waves-effect waves-light btn deep-orange darken-3" onclick="crea_lezione()" style="display: block;">
+                Aggiungi lezione
+            </button>
+                
+            <button id="btn_annulla_aggiungi_lezione" class="waves-effect waves-light btn deep-orange darken-3" onclick="annulla_crea_lezione()" style="display: none;">                    Annulla
+            </button>
 
-            <ul class="collapsible expandable popout" >
+            <ul id="nuova_lezione_collapsible" class="collapsible expandable popout" style="display: none;">
                     <li>
                         <div class="collapsible-header" style="display: block;">
                             Inserisci nuova lezione
@@ -110,7 +117,7 @@
 
             <div id="close_div_msg" class="bar error">
                 <div class="close" id="close_div_msg">X</div>
-                <span class="material-icons ico">report</span>
+                <i class="ico">&#9747;</i> 
                 <span>ERRORE: {{ msg_error }}</span>
             </div>
 
@@ -121,28 +128,26 @@
             
                
                 <div class="form-group col-xs-12 form-group-border">
-                
-                    <table class="tabel table-custom">
-                        <tbody style="  font-size: 14px;
-                        line-height: 1.428571429;
-                        color: #4b5159;">
-                            <tr class="table-header">
-                                
-                                <th> CORSO</th>
-                                <th>SEDE</th>
-                                <th>DATA</th>
-                                <th>ORA</th>
-                                <th>DURATA</th>
-                                <th>MODALITÀ</th>
-                                <th></th>
-                            </tr>
 
-                            {% for lezione in lezioni %}
+                    <table class="highlight">
+                        <thead>
+                            <tr>
+                            <th> CORSO</th>
+                            <th>SEDE</th>
+                            <th>DATA</th>
+                            <th>ORA</th>
+                            <th>DURATA</th>
+                            <th>MODALITÀ</th>
+                            <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                    
+                        {% for lezione in lezioni %}
                             {%- if lezione[1].inizio|is_datetime_ok -%}
                                 {% include 'lezione_elem.html' %}
                             {%- endif -%}
-
-                            {% endfor %}
+                        {% endfor %}
                             
                         </tbody>
 
@@ -154,19 +159,19 @@
                 <h4>Lezioni passate</h4>
                 <div class="form-group col-xs-12 form-group-border">
                 
-                    <table class="tabel table-custom">
-                        <tbody style="  font-size: 14px;
-                        line-height: 1.428571429;
-                        color: #4b5159;">
-                            <tr class="table-header">
-                                <th> CORSO</th>
-                                <th>SEDE</th>
-                                <th>DATA</th>
-                                <th>ORA</th>
-                                <th>DURATA</th>
-                                <th>MODALITÀ</th>
-                                <th></th>
+                    <table class="highlight">
+                        <thead>
+                            <tr>
+                            <th> CORSO</th>
+                            <th>SEDE</th>
+                            <th>DATA</th>
+                            <th>ORA</th>
+                            <th>DURATA</th>
+                            <th>MODALITÀ</th>
+                            <th></th>
                             </tr>
+                        </thead>
+                        <tbody>
 
                         {% for lezione in lezioni_passate %}
                             <!--visualizza solo le lezioni passate-->
@@ -175,8 +180,7 @@
                         {% endfor %}
                             
                     </tbody>
-
-                </table>
+                    </table>
                 </div>
 
                 {%- endif -%}
@@ -186,7 +190,10 @@
                     
             <div class="col s11 offset-s1" >
                 <div class="row" >
-                    <b>Nessuna lezione disponibile ☹</a>
+                    <div  class="bar warn">
+                        <i class="ico">&#9888;</i> 
+                        Nessuna lezione disponibile al momento
+                    </div>
                 </div>
             </div>
             {%- endif -%}
