aggiunto controllo posti disponibili aula lezione (prenotazione studenti)

--- a/app/templates/corso_elem.html
+++ b/app/templates/corso_elem.html
@@ -146,7 +146,7 @@
                             {%- endif -%}
                         {%- else -%}
                         <!--iscrizioni chiuse-->
-                            <div  class="bar warn right" style="cursor: help">
+                            <div  class="bar error right" style="cursor: help">
                                 <i class="ico">&#9888;</i> 
                                 Iscrizioni chiuse 
                             </div>
