--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Titolo che dovrebbe cambiaer</title>
+	<title>DreamTeam Project</title>
 
 	<link rel='stylesheet' href='https://www.w3schools.com/w3css/4/w3.css'>
 	<script src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script>
