--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,18 +67,18 @@
 						Il progetto è stato sviluppato da:
 					</p>
 					<ul>
-						<li>Luca Daminato</li>
 						<li>Nicola Marizza</li>
 						<li>Giulia Cogotti</li>
+						<li>Luca Daminato</li>
 					</ul>
 				</div>
 				<div class="col l4 offset-l2 s12">
 					<h5 class="white-text">Links</h5>
 					<ul>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-						<li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+						<li><a class="grey-text text-lighten-3" href="https://www.unive.it">Ca' Foscari</a></li>
+						<li><a class="grey-text text-lighten-3" href="https://www.unive.it/pag/8034">Orientamento</a></li>
+						<li><a class="grey-text text-lighten-3" href="https://www.unive.it/dipartimentiscuolecollegio">Dipartimenti, scuole e collegio</a></li>
+						<li><a class="grey-text text-lighten-3" href="https://www.unive.it/pag/11308">Strutture e uffici</a></li>
 					</ul>
 				</div>
 			</div>
